src/objects/Transfer_Header__c.object
<CustomObject>
    <fields>
        <fullName>Buyers_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buyers Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Define_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Define Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Ownership Transfers</relationshipLabel>
        <relationshipName>Ownership_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_From_Buyer__c</fullName>
        <label>Received From Buyer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_From_Seller__c</fullName>
        <label>Received From Seller</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unprocessed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_In_Rs__c</fullName>
        <label>Total(In Rs.)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Charges__c</fullName>
        <label>Transfer Charges</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Date__c</fullName>
        <label>Transfer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transfer_From_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer From Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.Project_Unit__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Opportunity.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Ownership Transfers</relationshipLabel>
        <relationshipName>Ownership_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_No__c</fullName>
        <label>Transfer No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_To_customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer To customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.Project_Unit__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Opportunity.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Transfer Header (Transfer To customer)</relationshipLabel>
        <relationshipName>Transfer_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Value__c</fullName>
        <label>Transfer Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Without_Dues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Without Dues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Without_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Without Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Ownership Transfers</relationshipLabel>
        <relationshipName>Ownership_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>identity_proof_of_buyer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>identity proof of buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>identity_proof_of_seller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>identity proof of seller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>letter_of_alotement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>letter of alotement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>original_receipts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>original receipts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>transfer_form_3_copies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>transfer form(3 copies)</label>
        <type>Checkbox</type>
    </fields>
    <label>Ownership Transfer</label>
    <nameField>
        <displayFormat>OT-{00000}</displayFormat>
        <label>Ownership Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Header</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>